Display artworks in activity feed from followed artists

--- a/app/assets/stylesheets/profile-page.scss
+++ b/app/assets/stylesheets/profile-page.scss
@@ -41,3 +41,11 @@
 .profile-content-tabs {
   margin-bottom: 40px;
 }
+
+
+/* Activity Feed */
+
+.activity-feed-profile-pic {
+  width: 40px;
+  border-radius: 50%;
+}
