--- a/app/assets/javascripts/grafff_app/app.js.erb
+++ b/app/assets/javascripts/grafff_app/app.js.erb
@@ -2,7 +2,8 @@ var app = angular.module('grafffApp', [
   'ngAnimate',
   'ngRoute',
   'ngResource',
-  'ngMap'
+  'ngMap',
+  'angularMoment'
 ]);
 
 app.config(['$routeProvider', function($routeProvider){
