--- a/app/assets/stylesheets/artwork-tiles.scss
+++ b/app/assets/stylesheets/artwork-tiles.scss
@@ -32,6 +32,13 @@
       padding: 0 20px 15px;
       text-align: left;
 
+      .thumbnail-address {
+        width: 200px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis; 
+      }
+
       .thumbnail-description {
         height: 65px;
         margin-bottom: 10px;
