--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -50,6 +50,13 @@
       padding: 0 20px 15px;
       text-align: left;
 
+      .large-thumbnail-address {
+        width: 285px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis; 
+      }
+
       .large-thumbnail-description {
         height: 65px;
         margin-bottom: 10px;
