--- a/app/assets/javascripts/grafff_app/directives/directives.js.erb
+++ b/app/assets/javascripts/grafff_app/directives/directives.js.erb
@@ -45,3 +45,18 @@ app.directive('artworkCards', function() {
   }
 
 });
+
+app.directive('validFile',function() {
+  return {
+    require:'ngModel',
+    link:function(scope, el, attrs, ngModel) {
+      el.bind('change',function() {
+        console.log('file added/changed');
+        scope.$apply(function() {
+          ngModel.$setViewValue(el.val());
+          ngModel.$render();
+        });
+      });
+    }
+  }
+});
