Tidy file validation code

--- a/app/assets/javascripts/grafff_app/directives/directives.js.erb
+++ b/app/assets/javascripts/grafff_app/directives/directives.js.erb
@@ -48,12 +48,11 @@ app.directive('artworkCards', function() {
 
 app.directive('validFile',function() {
   return {
-    require:'ngModel',
-    link:function(scope, el, attrs, ngModel) {
-      el.bind('change',function() {
-        console.log('file added/changed');
+    require: 'ngModel',
+    link: function(scope, element, attrs, ngModel) {
+      element.bind('change', function() {
         scope.$apply(function() {
-          ngModel.$setViewValue(el.val());
+          ngModel.$setViewValue(element.val());
           ngModel.$render();
         });
       });
