--- a/app/assets/stylesheets/artwork-page.scss
+++ b/app/assets/stylesheets/artwork-page.scss
@@ -65,6 +65,7 @@
     }
 
     #comment-field {
+      height: 70px;
       margin-bottom: 20px;
     }
 
@@ -103,7 +104,11 @@
         margin: 8px 5px 0 0;
         color: $mid-grey;
       }
-    }  
+    }
+
+    .comment:hover {
+      background: #f6f6f6;
+    }
   }
   
 }
