--- a/app/assets/templates/views/artwork.html
+++ b/app/assets/templates/views/artwork.html
@@ -21,6 +21,12 @@
       <div class="artwork-body-copy"><!-- Main: Description -->
         <p id="artwork-description">{{ artwork.description }}</p>
       </div>
+      
+      <div ng-controller="LikeController">
+        <button class="btn btn-primary" ng-hide="likeThisArtwork" ng-click="likeArtwork(currentUser.id, artwork.id)">Like</button>
+        <button class="btn btn-primary" ng-show="likeThisArtwork" ng-click="unlikeArtwork(currentUser.id)">Unlike</button>
+        <p>Likes: {{ artwork.likes.length }}</p>
+      </div>
 
       <div class="comment-area" ng-controller="CommentController"><!-- Comments -->
         <h3>Comments: ({{ comments.length }})</h3>
@@ -43,21 +49,17 @@
       </div>
     </div>
 
-    <div class="col-md-5"><!-- Aside: Map, likes, address -->
+    <div class="col-md-5 artwork-aside"><!-- Aside: Map, likes, address -->
       <map id="artwork-map"
-        zoom="13"
+        zoom="15"
         center="{{ artwork.lat }}, {{ artwork.lng }}"
         scrollwheel="false"
         styles="[{'featureType':'landscape','elementType':'labels','stylers':[{'visibility':'off'}]},{'featureType':'poi','elementType':'labels','stylers':[{'visibility':'off'}]},{'featureType':'road','elementType':'geometry','stylers':[{'lightness':57}]},{'featureType':'road','elementType':'labels.text.fill','stylers':[{'visibility':'on'},{'lightness':24}]},{'featureType':'road','elementType':'labels.icon','stylers':[{'visibility':'off'}]},{'featureType':'transit','elementType':'labels','stylers':[{'visibility':'off'}]},{'featureType':'water','elementType':'labels','stylers':[{'visibility':'off'}]}]">
         <marker position="{{ artwork.lat }}, {{ artwork.lng }}">
         </marker>
-    </map>
-
-      <div ng-controller="LikeController">
-        <button ng-hide="likeThisArtwork" ng-click="likeArtwork(currentUser.id, artwork.id)">Like</button>
-        <button ng-show="likeThisArtwork" ng-click="unlikeArtwork(currentUser.id)">Unlike</button>
-      </div>
-      <p>Likes: {{ artwork.likes.length }}</p>
+      </map>
+      <p><i class="fa fa-map-marker"></i>{{ artwork.address }}</p>
+      
     </div>
   </div>
 </div>
