--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -24,6 +24,9 @@ a:hover {
 }
 
 footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
   height: 150px;
   padding: 40px 0;
   background: $light-grey;
