--- a/app/assets/templates/directives/artist-artwork-map.html
+++ b/app/assets/templates/directives/artist-artwork-map.html
@@ -14,7 +14,7 @@
         <a ng-href="#/artworks/{{ artwork.id }}">
           <div class="row">
             <div class="info-window-image col-md-4">
-              <img src="{{ artwork.image }}">
+              <img ng-src="{{ artwork.image }}">
             </div>
             <div class="col-md-7 info-window-text">
               <p class="info-window-title"><strong>{{ artwork.title }}</strong></p>
