--- a/app/assets/templates/directives/artwork-cards.html
+++ b/app/assets/templates/directives/artwork-cards.html
@@ -1,7 +1,7 @@
 <a ng-href="#/artworks/{{ artwork.id }}" class="thumbnail-link">
   <div class="thumbnail">
     <div class="thumbnail-image">
-      <img src="{{ artwork.image }}">
+      <img ng-src="{{ artwork.image }}">
     </div>
     <div class="thumbnail-info">
       <p class="thumbnail-title"><strong>{{ artwork.title }}</strong></p>
