--- a/app/assets/templates/views/artwork.html
+++ b/app/assets/templates/views/artwork.html
@@ -4,13 +4,13 @@
     <!-- Artist profile image to go here -->
       <div class="artist-info">
         <a ng-href="#/users/{{ artwork.user.id }}/profile">
-          <img src="{{ artwork.user.profile_pic.url }}">
+          <img ng-src="{{ artwork.user.profile_pic.url }}">
           <p>{{ artwork.user.username }}</p>
         </a>
       </div>
 
     <div class="artwork-main-image"><!-- Artwork image -->
-      <img src="{{ artwork.image }}">
+      <img ng-src="{{ artwork.image }}">
     </div>
   </div>
 </div>
@@ -39,7 +39,7 @@
           <div class="comment"><!-- Individual comment -->
             <p id="comment-content">{{ comment.content }}</p>
             <a ng-href="#/users/{{ comment.user.id }}/profile">
-              <img class="comment-author-pic" src="{{ comment.user.profile_pic.url }}">
+              <img class="comment-author-pic" ng-src="{{ comment.user.profile_pic.url }}">
               <p class="comment-author">{{ comment.user.username }}</p>
             </a>
             <p class="comment-timestamp">{{ comment.created_at | amCalendar }}</p>
