--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= stylesheet_link_tag 'application' %>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <%= javascript_include_tag 'application' %>
-  <script src="http://maps.google.com/maps/api/js"></script>
+  <script src="//maps.google.com/maps/api/js"></script>
   <%= csrf_meta_tags %>
 </head>
 
