--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,60 +1,68 @@
-<h2>Sign up</h2>
+<div id="form-wrapper">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+  <h2>Sign up</h2>
 
-  <div class="field">
-    <%= f.radio_button 'is_artist', false %>
-    <%= label 'is_artist', 'User' %>
-    <%= f.radio_button 'is_artist', true %>
-    <%= label 'is_artist', 'Artist' %>
-  </div>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name %>
-  </div>
+    <div class="field">
+      <div class="artist">
+        <%= f.radio_button 'is_artist', false, class: 'role-radio-button' %>
+        <%= label 'is_artist', 'User' %>
+      </div>
+      <div class="user">
+        <%= f.radio_button 'is_artist', true, class: 'role-radio-button' %>
+        <%= label 'is_artist', 'Artist' %>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name %>
-  </div>
+    <div class="field">
+      <%= f.label :first_name %><br />
+      <%= f.text_field :first_name, placeholder: 'First name', class: 'form-control', autofocus: true %>
+    </div>
 
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username %>
-  </div>
+    <div class="field">
+      <%= f.label :last_name %><br />
+      <%= f.text_field :last_name, placeholder: 'Last name', class: 'form-control' %>
+    </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email %>
-  </div>
+    <div class="field">
+      <%= f.label :username %><br />
+      <%= f.text_field :username, placeholder: 'Username', class: 'form-control' %>
+    </div>
 
-  <div class="field">
-    <%= f.label :bio %><br />
-    <%= f.text_area :bio %>
-  </div>
+    <div class="field">
+      <%= f.label :email %><br />
+      <%= f.email_field :email, placeholder: 'Email', class: 'form-control' %>
+    </div>
 
-  <div class="field">
-    <%= f.label :profile_pic %><br />
-    <%= f.file_field :profile_pic %>
-  </div>
+    <div class="field">
+      <%= f.label :bio, 'About' %><br />
+      <%= f.text_area :bio, placeholder: 'About', class: 'form-control', rows: 4 %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @validatable %>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off", :placeholder => "#{@minimum_password_length} characters minimum" %>
-  </div>
+    <div class="field">
+      <%= f.label :profile_pic, 'Profile picture' %><br />
+      <%= f.file_field :profile_pic %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off", :placeholder => "#{@minimum_password_length} characters minimum" %>
-  </div>
+    <div class="field">
+      <%= f.label :password %>
+      <% if @validatable %>
+      <% end %><br />
+      <%= f.password_field :password, autocomplete: "off", :placeholder => "#{@minimum_password_length} characters minimum", class: 'form-control' %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+    <div class="field">
+      <%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "off", :placeholder => "#{@minimum_password_length} characters minimum", class: 'form-control' %>
+    </div>
 
-<%= render "devise/shared/links" %>
+    <div class="actions">
+      <%= f.submit "Sign up", class: 'btn btn-primary' %>
+    </div>
+  <% end %>
+
+  <%= render "devise/shared/links" %>
+
+</div>
