--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -90,4 +90,47 @@
   .likes {
     margin-right: 10px;
   }
+
+
+
+  /* Featured artists */
+
+  .featured-artists-header {
+
+    h3 {
+      margin: 80px 0 50px;
+    }
+
+    p {
+      margin-top: 80px;
+      text-align: right;
+    }
+  }
+
+  a {
+    color: $black;
+  }
+
+  .artist-thumbnail {
+    text-align: center;
+
+    .artist-profile-pic {
+
+      img {
+        width: 90%;
+        border-radius: 50%;
+        margin-bottom: 20px;
+      }
+    }
+
+    .artist-name {
+      margin-bottom: 0;
+    }
+  }
+
+  .artist-thumbnail:hover {
+    img {
+      box-shadow: 0px 0px 10px 0px $dark-grey;
+    }
+  }
 }
