--- a/app/assets/stylesheets/profile-page.scss
+++ b/app/assets/stylesheets/profile-page.scss
@@ -30,6 +30,12 @@
         font-size: 15px;
       }
     }
+
+    .registration-button {
+      display: block;
+      width: 97px;
+      margin-bottom: 15px;
+    }
   }
 
   .profile-picture {
