--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <nav ng-controller="HomeController">
+  <nav ng-controller="NavigationController">
     <%= link_to image_tag('grafff_spray_logo.png'), root_path, target: "_self", id: "logo" %>
     <form ng-submit="searchUsers()" ng-if="currentUser">
       <i class="fa fa-search"></i>
