Rename HomeController to IndexController. Remove uneccessary injections

--- a/app/assets/javascripts/grafff_app/app.js.erb
+++ b/app/assets/javascripts/grafff_app/app.js.erb
@@ -10,7 +10,7 @@ app.config(['$routeProvider', function($routeProvider){
 
   $routeProvider
   .when('/', {
-    controller: 'HomeController',
+    controller: 'IndexController',
     templateUrl: "<%= asset_path('pages/home/index.html') %>"
   })
   .when('/users/:id/profile', {
