--- a/app/assets/templates/pages/user/show.html
+++ b/app/assets/templates/pages/user/show.html
@@ -1,3 +1,4 @@
+<div ng-controller="ProfileController">
 <div class="profile-header"><!-- Profile header -->
   <div class="profile-header-wrapper">
     <div class="row">
