--- a/app/assets/templates/pages/home/index.html
+++ b/app/assets/templates/pages/home/index.html
@@ -73,7 +73,7 @@
 
     <div class="row">
       <div ng-repeat="artist in artists | orderBy: '-passive_relationships.length' | limitTo: '6'" class="col-md-2">
-        <a ng-href="#/users/{{ artist.id }}/profile">
+        <a ng-href="#/users/{{ artist.id }}">
           <div class="artist-thumbnail">
             <div class="artist-profile-pic">
               <img ng-src="{{ artist.profile_pic.url }}">
