--- a/app/assets/templates/pages/search/index.html
+++ b/app/assets/templates/pages/search/index.html
@@ -9,7 +9,7 @@
 
     <div class="row">
       <div ng-repeat="user in searchResults" class="col-md-2">
-        <a ng-href="#/users/{{ user.id }}/profile">
+        <a ng-href="#/users/{{ user.id }}">
           <div class="user-thumbnail">
             <div class="user-profile-pic">
               <img ng-src="{{ user.profile_pic.url }}">
