--- a/app/assets/javascripts/grafff_app/app.js.erb
+++ b/app/assets/javascripts/grafff_app/app.js.erb
@@ -13,17 +13,21 @@ app.config(['$routeProvider', function($routeProvider){
     controller: 'IndexController',
     templateUrl: "<%= asset_path('pages/home/index.html') %>"
   })
+  .when('/artists', {
+    controller: 'UserIndexController',
+    templateUrl: "<%= asset_path('pages/user/index.html') %>"
+  })
   .when('/users/:id', {
     controller: 'UserShowController',
     templateUrl: "<%= asset_path('pages/user/show.html') %>"
   })
-  .when('/artworks/:id', {
-    controller: 'ArtworkShowController',
-    templateUrl: "<%= asset_path('pages/artwork/show.html') %>"
-  })
   .when('/artworks', {
     controller: 'ArtworkIndexController',
     templateUrl: "<%= asset_path('pages/artwork/index.html') %>"
+  })
+  .when('/artworks/:id', {
+    controller: 'ArtworkShowController',
+    templateUrl: "<%= asset_path('pages/artwork/show.html') %>"
   })
   .when('/search', {
     controller: 'SearchController',
