--- a/app/assets/templates/pages/user/show.html
+++ b/app/assets/templates/pages/user/show.html
@@ -22,6 +22,7 @@
           <form ng-submit="unfollowUser(currentUser.id)" novalidate>
             <button ng-show="followingThisUser">Unfollow</button>
           </form>
+
         </div>
       </div>
     </div>
@@ -29,7 +30,7 @@
 </div>
 
 <div id="wrapper">
-  <div ng-controller="ProfileController"><!-- Profile body -->
+  <div><!-- Profile body -->
     <div class="profile-content-tabs"><!-- Nav -->
       <ul class="nav nav-pills" ng-if="!user.is_artist" ng-init="$parent.tab = 1"><!-- Nav pills -->
         <li ng-class="{ active:isSelected(1) }">
@@ -66,19 +67,35 @@
       <div ng-if="isSelected(2)"><!-- Likes -->
         <div class="card-container">
           <div class="row">
-            <div ng-repeat="artwork in likedArtworks | orderBy: '-created_at'" class="col-md-3">
-              <artwork-cards></artwork-cards>
+            <div ng-repeat="like in userLikes | orderBy: '-created_at'" class="col-md-3">
+              <a ng-href="#/artworks/{{ like.artwork.id }}" class="thumbnail-link">
+                <div class="thumbnail">
+                  <div class="thumbnail-image">
+                    <img ng-src="{{ like.artwork.image }}">
+                  </div>
+                  <div class="thumbnail-info">
+                    <p class="thumbnail-title"><strong>{{ like.artwork.title }}</strong></p>
+                    <p class="thumbnail-artist">{{ like.artwork.user.username }}</p>
+                    <p class="thumbnail-address"><em><i class="fa fa-map-marker"></i> {{ like.artwork.address }}</em></p>
+                    <p class="thumbnail-description">{{ like.artwork.description }}</p>
+                    <div class="card-footer">
+                      <i class="fa fa-thumbs-up likes"> {{ like.artwork.likes.length }}</i>
+                      <i class="fa fa-comment comments"> {{ like.artwork.comments.length }}</i>
+                    </div>
+                  </div>
+                </div>
+              </a>
             </div>
           </div>
         </div>
       </div>
       <div ng-if="isSelected(3)"><!-- Artists -->
-          <div ng-repeat="artist in followedArtists"><!-- Artist card -->
-            <a ng-href="#/users/{{ artist.id }}">
+          <div ng-repeat="artist in userRelationships | orderBy: '-created_at'"><!-- Artist card -->
+            <a ng-href="#/users/{{ artist.followed.id }}">
               <div><!-- Card wrapper -->
                 <img ng-src="http://lorempixel.com/150/100/abstract">
-                <h4>{{ artist.username }}</h4>
-                <p>{{ artist.bio }}</p>
+                <h4>{{ artist.followed.username }}</h4>
+                <p>{{ artist.followed.bio }}</p>
               </div>
             </a>
           </div>
@@ -87,7 +104,7 @@
       <div ng-show="isSelected(4)"><!-- Artworks -->
         <div class="card-container">
           <div class="row">
-            <div ng-repeat="artwork in userArtworks | orderBy: '-created_at'" class="col-md-3">
+            <div ng-repeat="artwork in artistArtworks | orderBy: '-created_at'" class="col-md-3">
               <a ng-href="#/artworks/{{ artwork.id }}" class="thumbnail-link">
                 <div class="thumbnail">
                   <div class="thumbnail-image">
@@ -104,7 +121,7 @@
                     </div>
                   </div>
                 </div>
-        </a>
+              </a>
             </div>
           </div>
         </div>
