--- a/app/assets/templates/pages/artwork/show.html
+++ b/app/assets/templates/pages/artwork/show.html
@@ -28,14 +28,14 @@
         <p>Likes: {{ artwork.likes.length }}</p>
       </div>
 
-      <div class="comment-area" ng-controller="CommentController"><!-- Comments -->
-        <h3>Comments: ({{ comments.length }})</h3>
+      <div class="comment-area"><!-- Comments -->
+        <h3>Comments: ({{ artworkComments.length }})</h3>
         <div><!-- Comment field -->
           <form ng-keypress="($event.which === 13) ? postComment(comment) : 0">
             <textarea id="comment-field" class="form-control" name="commentField" ng-model="comment.content" placeholder="Write a commment" ></textarea>
           </form>
         </div>
-        <div ng-repeat="comment in comments | orderBy: '-created_at'">
+        <div ng-repeat="comment in artworkComments | orderBy: '-created_at'">
           <div class="comment"><!-- Individual comment -->
             <p id="comment-content">{{ comment.content }}</p>
             <a ng-href="#/users/{{ comment.user.id }}">
